# DART-QUOTEX

./: INTEGRATION.md  README.md  integration_example.py  pyproject.toml  startup.py
dart-quotex/: README.md  main.py  run_pipeline.py
dart-quotex/dart_quotex/: __init__.py  backtester.py
dart-quotex/dart_quotex/data/: database.py  harvester.py
dart-quotex/dart_quotex/gui/: desktop_app.py
dart-quotex/dart_quotex/metrics/: performance.py
dart-quotex/dart_quotex/ml/: multi_timeframe.py  regime_detector.py  uncertainty.py
dart-quotex/dart_quotex/patterns/: candlestick.py
dart_quotex/: advisor.py  config.py  trader.py
dart_quotex/api/: candle_patch.py  quotex_client.py  robust_client.py
dart_quotex/arbitrage/: external_feed.py  latency.py
dart_quotex/data/: realtime.py
dart_quotex/gui/: web_dashboard.py
dart_quotex/manipulation/: tcn_spoofing.py
dart_quotex/ml/: ensemble.py  features.py  icm.py  sac_agent.py
dart_quotex/portfolio/: manager.py
dart_quotex/risk/: camouflage.py  manager.py
dart_quotex/sentiment/: news.py
dart_quotex/signals/: algo_patterns.py  manipulation.py  temporal_patterns.py
dart_quotex/smc/: advanced_ict.py  indicators.py
scripts/: build_tcn_library.py  scan_patterns.py
tests/: test_dart_quotex.py
