[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dart-quotex"
version = "1.0.0"
description = "AI-driven binary options trading bot for Quotex OTC markets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Core async / networking
    "python-dotenv>=1.0.0",

    # Data
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # ML
    "scikit-learn>=1.3.0",

    # Optional heavy deps — install separately if desired
    # "torch>=2.0.0",       # SAC neural network
    # "xgboost>=2.0.0",     # extra ensemble member
    # pyquotex — install from GitHub:
    # pip install git+https://github.com/cleitonleonel/pyquotex
]

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
xgboost = ["xgboost>=2.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
dart-quotex = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dart_quotex*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
